--- a/TidyTuesday/TT.4.13.18/heatmap.Rmd
+++ b/TidyTuesday/TT.4.13.18/heatmap.Rmd
@@ -30,6 +30,7 @@ A<-ggplot(dfm, aes(fct_rev(State), variable)) +
   scale_fill_gradientn(colours = myPalette(11)) +
   labs(y="State", x="Years", fill="Tuition ($)")
 
+## Save to file
 pdf("heatmap.avg.tuition.pdf")
 plot(A)
 dev.off()
